# tarski

./: .gitignore  .gitmodules  CMakeCache.txt  Makefile  README.md  cmake_install.cmake  something
cpp/src/: Makefile  innerAlgorithm  innerAlgorithm.cpp
dissertation/: Makefile  \  mybibfile.bib  skeleton.aux  skeleton.out  skeleton.tex  skeleton.toc
dissertation/chapters/: background.tex  conclusion.tex  introduction.tex
dissertation/chapters/background/: background.tex  sec1.tex  sec2.tex  sec3.tex
dissertation/chapters/related-problems/: arrival.tex  open.tex  related-problems.tex  shapley-stochastic.tex  simple-stochastic.tex
dissertation/chapters/testing-the-algorithms/: discussion.tex  further.tex  method.tex  results.tex  testing-the-algorithms.tex
dissertation/chapters/the-algorithms/: fix-decomp.tex  inner-algorithm.tex  mon-decomp.tex  overview.tex  the-algorithms.tex  woffle.tex
dissertation/diagrams/: arrivalDiagram.tex  expLong.tex  preprocess.tex  preprocessAfter.tex  shapley-diagram.tex  simple-stochastic-diagram.tex
dissertation/diagrams/from-fps/: README  macros.tex  step1.tex  step2.tex  witnesses.tex
dissertation/geogebra/: inner-diagram.ggb
notes/: 30-11  chenli  debug  diss-notes  ref
notes/12-01/: notes
notes/24-10/: notes.aux  notes.bbl  notes.bib  notes.blg  notes.tex
notes/4-11/: notes
notes/4-12/: notes
notes/7-11/: notes
notes/stochastic-games/: notes
presentation/second-marker-meeting/: arrivalDiagram.tex  expLong.tex  preprocess.tex  presentation.aux  presentation.nav  presentation.out  presentation.tex  presentation.toc
src/: .clang-format  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  build.ninja  cmake_install.cmake  config.cpp  config.h  examples.h  fixDecompAlgorithm.cpp  fixDecompAlgorithm.h  go.mod  innerAlgorithm.cpp  innerAlgorithm.h  kleeneTarski.h  latticeUtil.cpp  latticeUtil.h  main.cpp  monotoneFunction.cpp  monotoneFunction.h  recursiveBinarySearch.cpp  recursiveBinarySearch.h  something  src  threeDimensionAlgorithm.cpp
src-old/: innerAlgorithm.go
src/.cmake/api/v1/reply/: cache-v2-3dc0a51f514558dc44ed.json  cache-v2-9343707004df9bab97f5.json  cache-v2-9411a8650e12d628fef2.json  cmakeFiles-v1-7039a0a511f29c059c45.json  cmakeFiles-v1-b78ad2b7d9d781125469.json  cmakeFiles-v1-dbef0f7de340c8ac74d2.json  codemodel-v2-1066d036ab26aa608262.json  codemodel-v2-6c52b03e06174e0eca30.json  codemodel-v2-6d3aeaf6f9891643b096.json  codemodel-v2-a9981d32f3ac7fd3d970.json  codemodel-v2-d197cc80dd3b9dccfff7.json  index-2023-11-04T11-34-58-0674.json  index-2023-11-05T18-19-13-0633.json  index-2023-11-05T19-02-26-0205.json  index-2024-02-10T10-27-26-0524.json  index-2024-04-03T18-44-37-0205.json  target-analysis-Debug-7a087da990e3933d3f3a.json  target-arrival-Debug-05566ea5b01cd511d349.json  target-fixpoint-Debug-2b86a45efb1799c65657.json  target-shapley-stochastic-game-Debug-a57767a542740444a0ce.json  target-simple-stochatic-game-Debug-ac21c19188c256059bcf.json  target-src-Debug-791154f415d88ec08fc2.json  target-src-Debug-8784f4d0f2f949897d09.json  target-src-Debug-da9c91d1534616815f18.json  target-src-Debug-de495b3997ea41a193b5.json  target-src-Debug-e90d7877d386fc31a1a7.json
src/analysis/: makePlots.py  notes  runAnalysis.cpp  runAnalysis.h
src/arrival/: arrivalInstance.cpp  arrivalInstance.h  arrivalUtil.cpp  arrivalUtil.h  examples.h  generateInstance.cpp  generateInstance.h  generateRandomInstance.cpp  generateRandomInstance.h  preprocessInstance.cpp  preprocessInstance.h  simpleWalk.cpp  simpleWalk.h
src/contraction/: OddEven.cpp  OddEven.h
src/fixpoint/: findFixpointByMonotoneDecomp.cpp  findFixpointByMonotoneDecomp.h  fixDecompAlgorithm.cpp  fixDecompAlgorithm.h  innerAlgorithm.cpp  innerAlgorithm.h  kleeneTarski.cpp  kleeneTarski.h  latticeUtil.cpp  latticeUtil.h  monotoneDecompAlgorithm.cpp  monotoneDecompAlgorithm.h  monotoneFunction.cpp  monotoneFunction.h  recursiveBinarySearch.cpp  recursiveBinarySearch.h  threeDimensionAlgorithm.cpp  threeDimensionAlgorithm.h  valueIteration.cpp  valueIteration.h
src/shapley-stochastic-game/: shapleyStochasticGame.cpp  shapleyStochasticGame.h  shapleyStochasticGameGenerator.cpp  shapleyStochasticGameGenerator.h
src/simple-stochatic-game/: simpleContractionSolver.cpp  simpleContractionSolver.h  simpleStochasticGame.cpp  simpleStochasticGame.h  simpleStochasticGameGenerator.cpp  simpleStochasticGameGenerator.h  strategyImprovement.cpp  strategyImprovement.h  valueIteration.cpp  valueIteration.h
src/something.dSYM/Contents/Resources/DWARF/: something
